--- a/src/app/inicio-administrador/inicio-administrador.page.html
+++ b/src/app/inicio-administrador/inicio-administrador.page.html
@@ -7,6 +7,10 @@
 <ion-content>
   <!-- List of Text Items -->
   <ion-list>
+    <ion-item class="item" (click)="listaDeCompetencias()">
+      <img class="icon" src="assets/icon/list-check-solid.svg">
+      <ion-label >Listado de competencias</ion-label>
+    </ion-item>
     <ion-item class="item" (click)="listaDeUsers()">
       <img class="icon" src="assets/icon/list-check-solid.svg">
       <ion-label >Listado de usuario registrados</ion-label>
