--- a/src/app/logueo/logueo.page.html
+++ b/src/app/logueo/logueo.page.html
@@ -28,7 +28,7 @@
       </ion-row>
       <ion-row style="padding:0.2rem">
         <ion-col>
-            <ion-button (click)="signIn()" color="primary" type="submit" expand="block">Iniciar sesión</ion-button>
+            <ion-button (click)="signIn(user)" color="primary" type="submit" expand="block">Iniciar sesión</ion-button>
         </ion-col>
         <ion-col>
             <ion-button (click)="registro()" color="secondary" size="medium" expand="block">Registrarse</ion-button>
