--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -11,7 +11,7 @@
 <ion-content>
 
 
-  <form >
+  <form>
     <div padding>
       <ion-row>
         <ion-col style="text-align: center" >
@@ -48,7 +48,7 @@
 
     </div>
     <div padding>
-      <ion-button  size="large" (click)="signUp()" expand="block">Registrarme</ion-button>
+      <ion-button  size="large" (click)="signUp(user)" expand="block">Registrar</ion-button>
     </div>
   </form>
 </ion-content>
