--- a/src/app/edit-user/edit-user.page.html
+++ b/src/app/edit-user/edit-user.page.html
@@ -2,7 +2,8 @@
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-button (click)="volver()">
-        <ion-icon name="arrow-back-outline"></ion-icon>
+        <ion-icon name="arrow-back-outline" ></ion-icon>
+        <ion-title class="text" style="font-size: 1rem">EDICIÓN DE USUARIO </ion-title>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -10,11 +11,6 @@
 
 <ion-content>
   <ion-content fullscreen>
-    <ion-row style="padding-top: 1rem">
-      <ion-col style="text-align: center">
-          EDICION DE USUARIO
-      </ion-col>
-    </ion-row>
     <ion-row>
       <ion-col>
         <ion-item>
