--- a/src/app/inicio-administrador/inicio-administrador.page.html
+++ b/src/app/inicio-administrador/inicio-administrador.page.html
@@ -9,13 +9,21 @@
   <ion-list>
     <ion-item class="item" (click)="listaDeCompetencias()">
       <img class="icon" src="assets/icon/list-check-solid.svg">
-      <ion-label >Listado de competencias</ion-label>
+      <ion-label >Todas las competencias del mundo</ion-label>
+    </ion-item>
+    <ion-item class="item" (click)="miListaDeCompetencias()">
+      <img class="icon" src="assets/icon/list-check-solid.svg">
+      <ion-label >Mi lista de competencias</ion-label>
     </ion-item>
     <ion-item class="item" (click)="listaDeUsers()">
       <img class="icon" src="assets/icon/list-check-solid.svg">
       <ion-label >Listado de usuario registrados</ion-label>
     </ion-item>
-    <ion-item class="item" >
+    <ion-item class="item" (click)="irEditEnfrentamientos()">
+      <ion-label>Modificar enfrentamientos</ion-label>
+    </ion-item>
+    <ion-item class="item" (click)="irRegistro()">
+      <img class="icon" src="assets/icon/list-check-solid.svg">
       <ion-label>Alta de usuario</ion-label>
     </ion-item>
     <ion-item class="item" (click)="competencias()">
