--- a/src/app/inicio-page/inicio-page.page.html
+++ b/src/app/inicio-page/inicio-page.page.html
@@ -85,6 +85,12 @@
           <p class="text-grid-inicio">CAMPEON</p>
         </div>
       </ion-col>
+
+      <ion-col (click)="cerrarSesion()">
+        <ion-button>
+          CERRAR SESION
+        </ion-button>
+      </ion-col>
     </ion-row>
     <ion-row>
       <ion-button (click)="irListaUsuarios()">Ir a lista de usuarios</ion-button>
