--- a/src/app/partidos/partidos.page.html
+++ b/src/app/partidos/partidos.page.html
@@ -5,22 +5,16 @@
                 <ion-icon name="arrow-back-outline"></ion-icon>
             </ion-button>
         </ion-buttons>
+        <p>
+            Grupos
+        </p>
     </ion-toolbar>
 </ion-header>
-
-<ion-row>
-    <ion-col [size]="1"></ion-col>
-    <ion-col [size]="10">
-        <p class="text-carga" *ngIf="isCargandoTorneo"> Cargando torneos, aguarde por favor... </p>
-        <ion-progress-bar color="primary" class="barra-progreso"  *ngIf="isCargandoTorneo" type="indeterminate"></ion-progress-bar>
-    </ion-col>
-    <ion-col [size]="1"></ion-col>
-</ion-row>
 
 <ion-content>
     <ion-row>
         <ion-col [size]="6">
-            <ion-button>
+            <ion-button (click)="buscarGrupo()">
                 <p>BUSCAR GRUPO</p>
             </ion-button>
         </ion-col>
@@ -30,4 +24,43 @@
             </ion-button>
         </ion-col>
     </ion-row>
+   
+    <ion-row>
+        <ion-col *ngIf="isCargando" [size]="12">
+            <p class="text-carga"> Cargando, aguarde por favor... </p>
+            <ion-progress-bar color="primary" class="barra-progreso" type="indeterminate"></ion-progress-bar>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col [size]="12" *ngIf="isCargando">
+            <app-animation-progress></app-animation-progress>
+            <app-animation-progress></app-animation-progress>
+            <app-animation-progress></app-animation-progress>
+            <app-animation-progress></app-animation-progress>
+            <app-animation-progress></app-animation-progress>
+            <app-animation-progress></app-animation-progress>
+            <app-animation-progress></app-animation-progress>
+        </ion-col>
+    </ion-row>
+    
+    <div *ngIf="!isCargando">
+        <ion-row  *ngFor="let grupo of gruposDelUser">
+            <ion-col [size]="12">
+                <ion-list>
+                    <ion-item>
+                        <a *ngIf="grupo.idUserCreador == this.idUserGreaGrupo"> <ion-badge>Creador </ion-badge> </a>
+                        <ion-label> {{grupo.nameGrupo}}</ion-label>
+                        <ion-button *ngIf="grupo.idUserCreador != this.idUserGreaGrupo" (click)="salirDelGrupo(grupo)" slot="end" color="warning">
+                            SALIR DEL GRUPO
+                        </ion-button>
+                        <ion-button *ngIf="grupo.idUserCreador == this.idUserGreaGrupo" (click)="borrarGrupo(grupo)" slot="end" color="danger">
+                            ELIMINAR GRUPO
+                        </ion-button>
+                    </ion-item>
+                </ion-list>
+            </ion-col>
+        </ion-row>
+    </div>
+   
 </ion-content>
