--- a/src/app/list-enfrentamientos/list-enfrentamientos.page.scss
+++ b/src/app/list-enfrentamientos/list-enfrentamientos.page.scss
@@ -57,6 +57,14 @@
   font-family: 'Poppins-Regular', sans-serif;
 }
 
+.text-resultado-culminado-penales{
+  font-size: 1rem;
+  padding-right: 5px;
+  color: red;
+  border-bottom: 0.1rem solid var(--ion-color-primary-accent) !important;
+  font-family: 'Poppins-Regular', sans-serif;
+}
+
 
 
 //de aca
