--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
@@ -9,13 +9,19 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-item>
-    <ion-select [(ngModel)]="compActivas" (ngModelChange)="ngMode($event)"  placeholder="Selecciona una competencia">
-        <div *ngFor="let compActivas of competenciasActivas">
-            <ion-select-option [value]="compActivas"> {{compActivas.name}}</ion-select-option>
-        </div>
-    </ion-select>
-</ion-item>
+<ion-row>
+    <ion-col [size]="12">
+        <ion-item>
+            <ion-select [(ngModel)]="compActivas" (ngModelChange)="ngMode($event)" placeholder="Selecciona una competencia">
+                <div *ngFor="let compActivas of competenciasActivas">
+                    <ion-select-option [value]="compActivas"> {{compActivas.name}}</ion-select-option>
+                </div>
+            </ion-select>
+        </ion-item>
+    </ion-col>
+</ion-row>
+
+
 
 
 <ion-content [fullscreen]="true">
@@ -41,47 +47,50 @@
                                     <ion-input class="text-competencias" name="fechaEnfrentamiento" [(ngModel)]="enfrent.fechaEnfrentamiento"  type="text" ngModel required></ion-input>
                                 </ion-row>
                                 <ion-row>
-                                    <ion-col class="col-goles" [size]="4">
+                                    <ion-col [size]="4">
                                         <ion-row>
-                                          <img  class="input-goles" src="{{enfrent.logoLocal}}" style="height: 50%; width: 50%" >
+                                          <img class="centrar" src="{{enfrent.logoLocal}}" style="height: 50%; width: 50%" >
                                         </ion-row>
                                         <ion-row>
-                                            <ion-input class="input-goles" name="nameLocal" [(ngModel)]="enfrent.nameLocal"  type="text" ngModel required></ion-input>
+                                            <ion-input class="centrar" name="nameLocal" [(ngModel)]="enfrent.nameLocal"  type="text" ngModel required></ion-input>
                                         </ion-row>
                                     </ion-col>
-                                    <ion-col class="col-goles" [size]="4" *ngIf="enfrent.golLocal!=null || enfrent.golVisit!=null;else other_content">
-                                        <ion-row>
-                                            <ion-col [size]="12" >
-                                                <p class="input-goles"> Resultado:</p>
-                                                <ion-input class="input-goles" name="golLocal" [(ngModel)]="enfrent.golLocal"  type="text" ngModel required></ion-input>
-                                                <p> -- </p>
-                                                <ion-input class="input-goles" name="golLocal" [(ngModel)]="enfrent.golVisit"  type="text" ngModel required></ion-input>
+                                    <ion-col [size]="4" *ngIf="enfrent.golLocal!=null || enfrent.golVisit!=null;else other_content">
+                                        <ion-row class="display-flex">
+                                            <p class="text-resultado"> Resultado</p>
+                                            <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="5">
+                                                <ion-input class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golLocal"  type="text" ngModel required></ion-input>
+                                            </ion-col>
+                                            <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="2">
                                                 
+                                            </ion-col>
+                                            <ion-col [size]="5" class="ion-no-margin ion-no-padding display-flex">
+                                                <ion-input class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golVisit"  type="text" ngModel required></ion-input>
                                             </ion-col>
                                         </ion-row>
                                     </ion-col>
                                     <ng-template #other_content>
-                                            <ion-col class="col-goles" [size]="4">
+                                            <ion-col [size]="4">
                                                 <ion-row>
                                                     <ion-col class="col-goles">
-                                                        <p class="input-goles">Resultado no disponible</p>
+                                                        <p class="centrar">Resultado no disponible</p>
                                                     </ion-col>
                                                 </ion-row>
                                             </ion-col>
                                     </ng-template>
-                                    <ion-col [size]="4" class="col-goles">
+                                    <ion-col [size]="4">
                                         <ion-row>
-                                          <img src="{{enfrent.logoVisit}}" style="height: 50%; width: 50%" >
+                                          <img class="centrar" src="{{enfrent.logoVisit}}" style="height: 50%; width: 50%" >
                                         </ion-row>
                                         <ion-row>
-                                            <ion-input class="input-goles" name="nameVisit" [(ngModel)]="enfrent.nameVisit"  type="text" ngModel required></ion-input>
+                                            <ion-input class="centrar" name="nameVisit" [(ngModel)]="enfrent.nameVisit"  type="text" ngModel required></ion-input>
                                         </ion-row>
                                     </ion-col>
                                 </ion-row>
                                 <ion-row>
-                                    <ion-col [size]="12">
-                                        <ion-button style="text-align: center">
-                                            MODIFICAR
+                                    <ion-col [size]="12" class="display-flex">
+                                        <ion-button class="centrar" style="text-align: center">
+                                            MODIFICAR1
                                         </ion-button>
                                     </ion-col>
                                 </ion-row>
