modifica, fondo img

--- a/src/app/inicio-administrador/inicio-administrador.page.html
+++ b/src/app/inicio-administrador/inicio-administrador.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="bg-image no-scroll">
   <!-- List of Text Items -->
   <ion-list>
     <ion-item class="item" (click)="listaDeCompetencias()">
