--- a/src/app/logueo/logueo.page.html
+++ b/src/app/logueo/logueo.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content class="bg-image no-scroll desenfoque">
   <ion-row>
     <ion-col>
       <div class="icon-login">
@@ -24,7 +24,7 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <p (click)="resetearPass()" style="padding-left: 1rem">¿Olvidaste tu contraseña?</p>
+        <p class="text-white text-size-medium" (click)="resetearPass()" style="padding-left: 1rem">¿Olvidaste tu contraseña?</p>
       </ion-row>
       <ion-row style="padding:0.2rem">
         <ion-col>
