--- a/src/app/inicio-page/inicio-page.page.scss
+++ b/src/app/inicio-page/inicio-page.page.scss
@@ -2,6 +2,8 @@
   margin: 2rem;
 }
 
+
+
 .img-grid-resultado{
   text-align: center;
   height: 70%;
@@ -10,6 +12,9 @@
 
 .text-grid-inicio{
   text-align: center;
+  color: white;
+  font-size: 1rem;
+  font-weight: 600;
 }
 
 .slides_banner_principal {
