--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
@@ -3,15 +3,15 @@
         <ion-buttons slot="start">
             <ion-button (click)="volver()">
                 <ion-icon name="arrow-back-outline"></ion-icon>
-                <ion-title class="text">Modificacion de datos de competencia</ion-title>
+                <ion-title class="text-header">Edición de enfrentamientos</ion-title>
             </ion-button>
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
-<ion-row>
-    <ion-col [size]="12">
-        <ion-item>
+<ion-row  class="ion-no-margin ion-no-padding">
+    <ion-col [size]="12" class="color-2">
+        <ion-item class="color-3">
             <ion-select [(ngModel)]="compActivas" (ngModelChange)="ngMode($event)" placeholder="Selecciona una competencia">
                 <div *ngFor="let compActivas of competenciasActivas">
                     <ion-select-option [value]="compActivas"> {{compActivas.name}}</ion-select-option>
@@ -27,6 +27,8 @@
 <ion-content [fullscreen]="true">
     <ion-row>
         <ion-col [size]="12" *ngIf="isCargando">
+            <ion-progress-bar color="primary" type="indeterminate"></ion-progress-bar>
+            <p>Aguarde, cargando enfrentamientos de <b>{{competenciaSeleccionada}}</b></p>
             <app-animation-progress></app-animation-progress>
             <app-animation-progress></app-animation-progress>
             <app-animation-progress></app-animation-progress>
@@ -44,9 +46,6 @@
                         <ion-row>
                             <ion-col [size]="12">
                                 <ion-row>
-                                    <ion-input class="text-competencias" name="fechaEnfrentamiento" [(ngModel)]="enfrent.fechaEnfrentamiento"  type="text" ngModel required></ion-input>
-                                </ion-row>
-                                <ion-row>
                                     <ion-col [size]="4">
                                         <ion-row>
                                           <img class="centrar" src="{{enfrent.logoLocal}}" style="height: 50%; width: 50%" >
@@ -59,21 +58,21 @@
                                         <ion-row class="display-flex">
                                             <p class="text-resultado"> Resultado</p>
                                             <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="5">
-                                                <ion-input class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golLocal"  type="text" ngModel required></ion-input>
+                                                <ion-input class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golLocal"  type="number" ngModel required></ion-input>
                                             </ion-col>
                                             <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="2">
                                                 
                                             </ion-col>
                                             <ion-col [size]="5" class="ion-no-margin ion-no-padding display-flex">
-                                                <ion-input class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golVisit"  type="text" ngModel required></ion-input>
+                                                <ion-input class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golVisit"  type="number" ngModel required></ion-input>
                                             </ion-col>
                                         </ion-row>
                                     </ion-col>
                                     <ng-template #other_content>
                                             <ion-col [size]="4">
                                                 <ion-row>
-                                                    <ion-col class="col-goles">
-                                                        <p class="centrar">Resultado no disponible</p>
+                                                    <ion-col class="display-flex">
+                                                        <p class="ion-no-margin ion-no-padding text-resultado-no-disponible">Resultado no disponible</p>
                                                     </ion-col>
                                                 </ion-row>
                                             </ion-col>
@@ -90,7 +89,7 @@
                                 <ion-row>
                                     <ion-col [size]="12" class="display-flex">
                                         <ion-button class="centrar" style="text-align: center">
-                                            MODIFICAR1
+                                            MODIFICAR
                                         </ion-button>
                                     </ion-col>
                                 </ion-row>
