--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.scss
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.scss
@@ -2,10 +2,6 @@
   color: black;  
 }
 
-.col-goles{
-  display: flex;
-}
-
 .centrar{
   margin:auto;
 }
@@ -31,3 +27,8 @@
   margin-left: 1rem;
 }
 
+.text-resultado-no-disponible{
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center !important;
+}
